--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
       </div>
     </div>
     <video class="w-full h-full object-cover" autoPlay muted loop>
-      <source src="assets/Video8_2.mp4" type="video/mp4" />
+      <source src="fachada_1.mp4" type="video/mp4" />
     </video>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
