--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,6 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Notable&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <style>
     .video-container {
       height: 100vh;
@@ -34,7 +33,7 @@
     <div class="absolute top-0 right-0 bottom-0 left-0 h-full w-full overflow-hidden bg-[hsla(0,0%,0%,0.75)] bg-fixed">
       <div class="flex h-full items-center justify-center">
         <div class="px-6 text-center text-yellow-50 opacity-70 md:px-12">
-          <h1 class=" mt-2 mb-12  "><a class="animsition-link" href="puertalcala.html">
+          <h1 class=" mt-2 mb-12  "><a  href="puertalcala.html">
               Conoce los rincones de <br /><span>El Retiro</span>
           </h1>
           <button
@@ -49,12 +48,7 @@
     </video>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
-  <script src="../dist/js/animsition.min.js" charset="utf-8"></script>
-  <script>
-    $(document).ready(function () {
-      $('.animsition').animsition();
-    });
-  </script>
+
 </body>
 
 </html>
