--- a/src/puertalcala.html
+++ b/src/puertalcala.html
@@ -37,7 +37,7 @@
 
     <video id="video" loop muted autoplay crossorigin="anonymous" webkit-playsinline="true" playsinline="true"
       onloadedmetadata="this.currentTime=0">
-      <source type="video/mp4" src="assets/videos editados 360/puerta_alcala.webm">
+      <source type="video/mp4" src="assets/videos editados 360/">
       <source type="video/mp4" src="assets/videos editados 360/puerta_alcala.mp4">
     </video>
 
