--- a/src/puertalcala.html
+++ b/src/puertalcala.html
@@ -37,8 +37,8 @@
 
     <video id="video" loop muted autoplay crossorigin="anonymous" webkit-playsinline="true" playsinline="true"
       onloadedmetadata="this.currentTime=0">
-      <source type="video/mp4" src="assets/videos editados 360/">
-      <source type="video/mp4" src="assets/videos editados 360/puerta_alcala.mp4">
+      <source type="video/mp4" src="assets/videos/fachada_1.mp4">
+      
     </video>
 
     <h1 class="mt-6 nab">Retiro 360</h1>
