--- a/src/puertalcala.html
+++ b/src/puertalcala.html
@@ -56,7 +56,7 @@
 
     <img src="assets/imagenes/submarca_agenciaempleo_vertical_madrid_negro.png" style="z-index: 999;
     position: absolute; display: block; margin-left: 40px; margin-top: 30px;" width="300px"></img>
-    <h2 class=""> Parque del Buen Retiro </h2>
+    <h2 style="color: black;" class=""> Sede Áncora </h2>
     
 
     <section class="weather-container sm:gap-2 text-white gap-4 flex items-center justify-between">
@@ -69,19 +69,19 @@
 
     <div class="flechas sm:gap-2 text-white gap-4 flex items-center justify-between">
       <a href="entrada.html">
-        <h3 class="text-white flex ">ACCESO PRINCIPAL</h3>
+        <h3 class="text-black flex ">ACCESO PRINCIPAL</h3>
       </a>
 
       <a href="entrada.html">
         <svg type="button" xmlns="http://www.w3.org/2000/svg" class="flecha1 justify-start w-5"
           viewBox="0 0 126.667 89.067">
           <path d="M0 50.933h101.201L72.667 79.467l9.466 9.6 44.534-44.534L82.133 0h-.001l-9.465 9.6 27.868 27.867H0z"
-            fill="white"></path>
+            fill="black"></path>
         </svg>
       </a>
     </div>
 
-    <a class="uk-button btnmg uk-button-default" href="#modal-overflow" uk-toggle>Conoce +</a>
+    <a style="color: black;"  class="uk-button btnmg uk-button-default " href="#modal-overflow" uk-toggle>Conoce +</a>
     <img class="visible" src="assets/white-swipe.png" alt="">
     <div id="modal-overflow" style="opacity: 0.8;" uk-modal>
       <div id="alcala" class="uk-modal-dialog">
