--- a/src/login.html
+++ b/src/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <link href="./output.css" rel="stylesheet">
+  <link href="../src/dist/css/output.css" rel="stylesheet">
 
 
 
