--- a/frontend/src/admin/admin.html
+++ b/frontend/src/admin/admin.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="../dist/assets/imagenes/submarca_agenciaempleo_vertical_madrid_negro.png" alt="Escudo" class="logo">
+        <img src="../../dist/assets/imagenes/submarca_agenciaempleo_vertical_madrid_negro.png" alt="Escudo" class="logo">
         
         <div class="logout">
             <a href="#">Logout</a>
@@ -23,8 +23,18 @@
             <h2>Panel de Escenas</h2>
             <form>
                 <label for="scene">Seleccione la escena</label>
-                <input type="text" id="scene" name="scene" placeholder="Seleccione la escena" required>
+                <select id="scene" name="scene" required>
+                    <option value="" disabled selected>Seleccione la escena</option>
+                    <option value="escena1">Agencia</option>
+                    <option value="escena2">Entrada</option>
+                    <option value="escena3">Intermediacion</option>
+                    <option value="escena3">Salta</option>
+                    <option value="escena3">Talento</option>
+                    <option value="escena3">Ancora</option>
 
+
+
+                </select>
                 <label for="title">TITULO</label>
                 <input type="text" id="title" name="title" required>
 
