--- a/frontend/src/admin/login.html
+++ b/frontend/src/admin/login.html
@@ -11,7 +11,7 @@
 <body>
   <div class="login-container">
     <div class="logo">
-      <img src="../dist/assets/imagenes/submarca_agenciaempleo_vertical_madrid_negro.png" alt="Escudo">
+      <img src="../../dist/assets/imagenes/submarca_agenciaempleo_vertical_madrid_negro.png" alt="Escudo">
     </div>
     <div class="title">
       <span class="ae">ae</span> AGENCIA PARA EL EMPLEO
