--- a/frontend/src/admin/admin.html
+++ b/frontend/src/admin/admin.html
@@ -9,7 +9,6 @@
 <body>
     <div class="header">
         <img src="../../dist/assets/imagenes/submarca_agenciaempleo_vertical_madrid_negro.png" alt="Escudo" class="logo">
-        
         <div class="logout">
             <a href="#">Logout</a>
         </div>
@@ -21,20 +20,18 @@
         <h1>PANEL DE ADMINISTRADOR</h1>
         <div class="panel">
             <h2>Panel de Escenas</h2>
-            <form>
+            <form id="adminForm">
                 <label for="scene">Seleccione la escena</label>
                 <select id="scene" name="scene" required>
                     <option value="" disabled selected>Seleccione la escena</option>
                     <option value="escena1">Agencia</option>
                     <option value="escena2">Entrada</option>
                     <option value="escena3">Intermediacion</option>
-                    <option value="escena3">Salta</option>
-                    <option value="escena3">Talento</option>
-                    <option value="escena3">Ancora</option>
-
-
-
+                    <option value="escena4">Salta</option>
+                    <option value="escena5">Talento</option>
+                    <option value="escena6">Ancora</option>
                 </select>
+
                 <label for="title">TITULO</label>
                 <input type="text" id="title" name="title" required>
 
@@ -43,8 +40,21 @@
 
                 <label for="video">Link video 360</label>
                 <input type="text" id="video" name="video" required>
+
+                <button type="submit" class="submit-btn">Enviar</button>
             </form>
         </div>
     </div>
+
+    <script>
+        document.getElementById('adminForm').addEventListener('submit', function(event) {
+            event.preventDefault();
+            if (confirm('¿Está seguro de que desea enviar el formulario?')) {
+                alert('Formulario enviado con éxito');
+                this.reset();  // Esto reinicia el formulario, borrando todos los campos.
+
+            }
+        });
+    </script>
 </body>
 </html>
